--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
 passlib==1.7.1
+pkg-resources==0.0.0
 psycopg2==2.7.3
 python-dateutil==2.6.1
 python-editor==1.0.3
