--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 alembic==0.9.3
+bcrypt==3.1.3
+blinker==1.4
+cffi==1.10.0
 click==6.7
+coverage==4.4.1
 Flask==0.12.2
+Flask-Bcrypt==0.7.1
+Flask-DebugToolbar==0.10.1
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.6
@@ -11,6 +20,8 @@ Mako==1.0.7
 MarkupSafe==1.0
 passlib==1.7.1
 psycopg2==2.7.3
+pycparser==2.18
+python-bcrypt==0.3.2
 python-dateutil==2.6.1
 python-editor==1.0.3
 six==1.10.0
