--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,14 @@ Flask==0.12.2
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.1
 Flask-Mail==0.9.1
-Flask-Migrate==2.1.0
 Flask-Script==2.0.5
+Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
+mutagen==1.38
 passlib==1.7.1
 psycopg2==2.7.3
 pycparser==2.18
