--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==0.9.3
 bcrypt==3.1.3
 blinker==1.4
 cffi==1.10.0
@@ -7,9 +8,11 @@ Flask==0.12.2
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.1
 Flask-Mail==0.9.1
+Flask-Migrate==2.1.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-Testing==0.6.2
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
