--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coverage==4.4.1
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.1
+Flask-Limiter==1.0.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.0
 Flask-Script==2.0.5
@@ -15,6 +16,7 @@ Flask-Testing==0.6.2
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.9.6
+limits==1.2.1
 Mako==1.0.7
 MarkupSafe==1.0
 mutagen==1.38
